chore(root): husky+lint-staged

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint:prettier": "prettier --write \"**/*.{js,ts,mjs,cjs,json,tsx,css,less,scss,vue,html.md}\"",
     "lint:eslint": "eslint",
     "lint:spellcheck": "cspell lint \"(packages|apps)/**/*.{js,ts,mjs,cjs,json,tsx,css,less,scss,vue,html.md}\"",
-    "commit": "git-cz"
+    "commit": "git-cz",
+    "prepare": "husky",
+    "precommit": "lint-staged"
   },
   "devDependencies": {
     "@commitlint/cli": "^20.1.0",
@@ -24,6 +26,8 @@
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-vue": "^10.5.1",
     "globals": "^16.5.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.6",
     "prettier": "^3.6.2",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.46.2"
